<resources>
    <string name="app_name">Quiz</string>
    <string name="start_learning">Learn</string>
    <string name="photo_description">Photo of a celebrity</string>
    <string name="next_category">Next category</string>
    <string name="performed_by">Performed by: </string>
    <string name="play_pause_button">Play/pause button</string>
    <string name="guess_the_celebrity">Guess the celebrity</string>
    <string name="sounds_familiar">Sounds familiar?</string>
    <string name="play_button">Play button</string>
    <string name="start_quiz">Start quiz</string>
    <string name="looks_familiar">Looks familiar?</string>
    <string name="button_next">Next</string>
    <string name="no_answer_selected_toast">Select an answer to continue</string>
    <string name="take_quiz">Take quiz</string>
    <string name="leave_quiz_dialog_msg">Are you sure you want to leave the quiz?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="movie_posters_collage">Movie posters collage</string>
    <string name="menu_title">Movie Quiz</string>
</resources>
